Using ef models and sql express connection.

--- a/PaintSurvey/PaintSurvey/Views/Home/Index.cshtml
+++ b/PaintSurvey/PaintSurvey/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
 </head>
 <body>
     <h1 id='app-title'>Paint Survey</h1>
+    <b>@ViewBag.Message</b>
     <div id='carousel' class='owl-carousel'></div>
 
     <div id='caro-pages'>
